# 2024-04-22-Talk-PyConDE-Metaclasses

./: .gitignore  Makefile  README.md  pyproject.toml
slides/: metaclasses.md
slides/code/: README.md  autostring.py  autostring_demo.py  slide0_methods.py  slide12_walkthru.py  slide1_runtime.py  slide20_init_subclass.py  slide20_meta_alternatives.py  slide22_decorator.py  slide23_keywords.py  slide5_dynamic_class.py  slide9_better_repr.py
slides/css/: style.css
