[tool.poetry]
name = "2022-10-23-talk-pythonbrasil-metaclasses"
version = "0.1.0"
description = "Metaclasses: Pra que servem? Onde vivem? Como se reproduzem?"
authors = ["Leonardo Rochael Almeida <leorochael@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
